# Snake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Snake Game.desktop  WinSnake.c  mingw-toolchain.cmake  snake  snake.c  toolchain-mingw.cmake  vcpkg.json
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  start-linux
build-linux/CSnake/: start-linux
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake  start-linux
lib/: Background.h  Food.h  Menu.h  Snake.h
src/: main.cpp
src/Background/: Background.cpp
src/Food/: Food.cpp
src/Menu/: Menu.cpp
src/Snake/: Snake.cpp
